<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/meetcontainer"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:fontFamily="@font/font"
            android:layout_width="wrap_content"
            android:textColor="@color/blue_col"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/welcome_to" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:fontFamily="@font/font"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#3A14D4"
            android:layout_gravity="center"
            android:text="@string/bmeet" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/meetcontainer"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="270dp"
            android:src="@drawable/back"
            android:layout_centerHorizontal="true"
            android:layout_height="270dp"
            android:contentDescription="@string/background" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/character"
            android:contentDescription="@string/character" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/login_but"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:elevation="10dp"
        android:src="@drawable/button1"
        android:translationZ="10dp" />

</RelativeLayout>